Przeniesienie FratikBOT do nieobsługiwanych aplikacji

--- a/topka/150.md
+++ b/topka/150.md
@@ -3,5 +3,4 @@
 | Ranking | Bot                                                                                           | Szacunkowa liczba serwerów | Biblioteka | Odznaki bota |
 | ---- | --------------------------------------------------------------------------------------------- | ------------------------ | ------------------------ | ------------------------ |
 |    🥇1| [MightyBot](https://discord.com/oauth2/authorize?client_id=569914884867751956&scope=bot+applications.commands&permissions=2146958847)       |               206 | discord.js | ![](/static/badges/odznaki/supportscommands.ico) |
-|    🥈2| [bot.js](https://discord.com/oauth2/authorize?client_id=479612191767789573&scope=bot&permissions=8)       |               157 | discord.py | ![](/static/badges/odznaki/supportscommands.ico) |
-|    🥉3| [Muse](https://discord.com/oauth2/authorize?client_id=1243281628680159242&permissions=8&scope=bot) <img src="/static/badges/bots/advice.svg" height="20" width="20">        |               153 | discord.ts | ![](/static/badges/odznaki/supportscommands.ico) ![](/static/badges/odznaki/premiumbot.ico) |
+|    🥈2| [Muse](https://discord.com/oauth2/authorize?client_id=1243281628680159242&permissions=8&scope=bot) <img src="/static/badges/bots/advice.svg" height="20" width="20">        |               153 | discord.ts | ![](/static/badges/odznaki/supportscommands.ico) ![](/static/badges/odznaki/premiumbot.ico) |
