Dodanie języka programowania oraz zmiana ikonek w legendzie

--- a/topka/500.md
+++ b/topka/500.md
@@ -6,5 +6,5 @@
 |    🥈2| [RadiOOMbo BOT](https://discord.com/oauth2/authorize?client_id=675416683481006159&permissions=8&scope=bot) <img src="/static/badges/bots/botmuzyczny.svg" height="20" width="20">        |               886 | discord.js | ![](/static/badges/odznaki/supportscommands.ico) |
 |    🥉3| [Metrum](https://discord.com/oauth2/authorize?client_id=890577647980146688&permissions=8&scope=bot)        |               855 |  | ![](/static/badges/odznaki/supportscommands.ico) |
 |    4| [Janusz](https://discord.com/oauth2/authorize?client_id=421679109954076692&permissions=8&scope=bot)        |               844 |  | ![](/static/badges/odznaki/supportscommands.ico) |
-|    5| [popebot](https://discord.com/oauth2/authorize?client_id=997525532101050538&permissions=8&scope=bot)        |               789 |  | ![](/static/badges/odznaki/supportscommands.ico) |
+|    5| [popebot](https://discord.com/oauth2/authorize?client_id=997525532101050538&permissions=8&scope=bot)        |               789 | discord.js | ![](/static/badges/odznaki/supportscommands.ico) |
 |    6| [Shiroe](https://discord.com/oauth2/authorize?client_id=782299960283627540&permissions=8&scope=bot)        |               563 | discord.js | ![](/static/badges/odznaki/supportscommands.ico) | 
