--- a/topka/1000.md
+++ b/topka/1000.md
@@ -2,7 +2,7 @@
 
 | Ranking | Bot                                                                                           | Szacunkowa liczba serwerów | Biblioteka | Odznaki bota |
 | ---- | --------------------------------------------------------------------------------------------- | ------------------------ | ------------------------ | ------------------------ |
-|    🥇1 | [vaobot](https://discord.com/oauth2/authorize?client_id=582183202341388308&scope=bot)           |      5,190        |  | ![](/static/badges/odznaki/supportscommands.ico) ![](/static/badges/odznaki/premiumbot.ico) ![](/static/badges/odznaki/automod.ico)  |
+|    🥇1 | [vaobot](https://discord.com/oauth2/authorize?client_id=582183202341388308&scope=bot)           |      5,190        | discord.js | ![](/static/badges/odznaki/supportscommands.ico) ![](/static/badges/odznaki/premiumbot.ico) ![](/static/badges/odznaki/automod.ico)  |
 |    🥈2 | [Somsiad](https://discord.com/oauth2/authorize?client_id=473816281028493314&permissions=8&scope=bot)           |      5,140      | discord.py |  |
 |    🥉3 | [boht](https://discord.com/oauth2/authorize?client_id=489377322042916885&permissions=8&scope=bot)        |               5,100 | discord.js | ![](/static/badges/odznaki/supportscommands.ico) |
 |    4 | [Janusz](https://discord.com/oauth2/authorize?client_id=699551628499615764&permissions=8&scope=bot)        |               4,920 | discord.js | ![](/static/badges/odznaki/supportscommands.ico) |
@@ -10,7 +10,7 @@
 |    6 | [Atorin](https://discord.com/oauth2/authorize?client_id=408959273956147200&permissions=8&scope=bot)        |               2,140 | discord.py | ![](/static/badges/odznaki/supportscommands.ico) |
 |    7| [Klonba](https://discord.com/oauth2/authorize?client_id=488809387910234145&permissions=8&scope=bot)        |               1,970 | discord.js | ![](/static/badges/odznaki/supportscommands.ico) |
 |    8| [UMPU](https://discord.com/oauth2/authorize?client_id=855900715720245289&permissions=8&scope=bot)       |               1,950 | discord.js | ![](/static/badges/odznaki/supportscommands.ico) |
-|    9| [Skręcior](https://discord.com/oauth2/authorize?client_id=939103800898224139&permissions=8&scope=bot)        |               1,470 |  | ![](/static/badges/odznaki/premiumbot.ico) |
+|    9| [Skręcior](https://discord.com/oauth2/authorize?client_id=939103800898224139&permissions=8&scope=bot)        |               1,470 | JDA | ![](/static/badges/odznaki/premiumbot.ico) |
 |    10 | [Bot Muzyczny 2](https://discord.com/oauth2/authorize?client_id=933385820889550878&permissions=8&scope=bot) <img src="/static/badges/bots/botmuzyczny.svg" height="20" width="20">        |       1,300         | discord.js | ![](/static/badges/odznaki/supportscommands.ico) |
 |    11| [Polish Memes](https://discord.com/oauth2/authorize?client_id=829662885058707497&permissions=8&scope=bot)        |               1,080 |  | ![](/static/badges/odznaki/supportscommands.ico)  |
 |    12| [MaxHard BOT](https://discord.com/oauth2/authorize?client_id=684503427761569908&permissions=8&scope=bot)       |               1,030 |  | ![](/static/badges/odznaki/supportscommands.ico) |
