--- a/topka/10000.md
+++ b/topka/10000.md
@@ -2,6 +2,6 @@
 
 | Ranking | Bot                                                                                           | Szacunkowa liczba serwerów | Biblioteka | Odznaki bota |
 | ---- | --------------------------------------------------------------------------------------------- | ------------------------ | ------------------------ | ------------------------ |
-|    🥇1 | [AdviceBot](https://discord.com/oauth2/authorize?client_id=942110955502989373&permissions=8&scope=bot) <img src="/static/badges/bots/advice.svg" height="20" width="20">        |               89,800 | discord.py | ![](/static/badges/odznaki/supportscommands.ico) |
-|    🥈2 | [Bot Muzyczny](https://discord.com/oauth2/authorize?client_id=840892428613320726&permissions=8&scope=bot) <img src="/static/badges/bots/botmuzyczny.svg" height="20" width="20">        |               27,800 | discord.js | ![](/static/badges/odznaki/supportscommands.ico) |
-|    🥉3 | [BOOMfinity](https://discord.com/oauth2/authorize?client_id=450017151323996173&permissions=8&scope=bot) <img src="/static/badges/bots/boomfinity.svg" height="20" width="20">        |               20,500 | discord.js | ![](/static/badges/odznaki/supportscommands.ico) | 
+|    🥇1 | [AdviceBot](https://discord.com/oauth2/authorize?client_id=942110955502989373&permissions=8&scope=bot) <img src="/static/badges/bots/advice.svg" height="20" width="20">        |               89,800 | discord.py | <img src="/static/badges/odznaki/supportscommands.svg" height="30" width="30"> |
+|    🥈2 | [Bot Muzyczny](https://discord.com/oauth2/authorize?client_id=840892428613320726&permissions=8&scope=bot) <img src="/static/badges/bots/botmuzyczny.svg" height="20" width="20">        |               27,800 | discord.js | <img src="/static/badges/odznaki/supportscommands.svg" height="30" width="30"> |
+|    🥉3 | [BOOMfinity](https://discord.com/oauth2/authorize?client_id=450017151323996173&permissions=8&scope=bot) <img src="/static/badges/bots/boomfinity.svg" height="20" width="20">        |               20,500 | discord.js | <img src="/static/badges/odznaki/supportscommands.svg" height="30" width="30"> | 
