--- a/topka/100000.md
+++ b/topka/100000.md
@@ -2,4 +2,4 @@
 
 | Ranking | Bot                                                                                           | Szacunkowa liczba serwerów | Biblioteka | Odznaki bota |
 | ---- | --------------------------------------------------------------------------------------------- | ------------------------ | ------------------------ | ------------------------ |
-|    🥇1 | [StartIT](https://discord.com/oauth2/authorize?client_id=572906387382861835&permissions=8&scope=bot) <img src="/static/badges/bots/startit.svg" height="20" width="20">         |               346,000 | Niestandardowy (Python) |  ![](/static/badges/odznaki/supportscommands.ico)
+|    🥇1 | [StartIT](https://discord.com/oauth2/authorize?client_id=572906387382861835&permissions=8&scope=bot) <img src="/static/badges/bots/startit.svg" height="20" width="20">         |               346,000 | Niestandardowy (Python) |  <img src="/static/badges/odznaki/supportscommands.svg" height="30" width="30"> | 
