--- a/topka/250.md
+++ b/topka/250.md
@@ -2,7 +2,7 @@
 
 | Ranking | Bot                                                                                           | Szacunkowa liczba serwerów | Biblioteka | Odznaki bota |
 | ---- | --------------------------------------------------------------------------------------------- | ------------------------ | ------------------------ | ------------------------ |
-|    🥇1| [Aviation](https://discord.com/oauth2/authorize?client_id=1038232661900152912&permissions=8&scope=bot)        |               393 | discord.js | ![](/static/badges/odznaki/supportscommands.ico) |
-|    🥈2| [Dev Bot](https://discord.com/oauth2/authorize?client_id=931245390836146186&permissions=8&scope=bot)       |               342 | discord.js | ![](/static/badges/odznaki/supportscommands.ico) |
-|    🥉3| [Cenzura](https://discord.com/oauth2/authorize?client_id=705552952600952960&permissions=268561494&scope=bot)        |               318 | discord.py | ![](/static/badges/odznaki/supportscommands.ico) |
-|    4| [Daphner](https://discord.com/oauth2/authorize?client_id=675416683481006159&permissions=8&scope=bot)        |               284 | discord.js | ![](/static/badges/odznaki/supportscommands.ico) ![](/static/badges/odznaki/automod.ico) |
+|    🥇1| [Aviation](https://discord.com/oauth2/authorize?client_id=1038232661900152912&permissions=8&scope=bot)        |               393 | discord.js | <img src="/static/badges/odznaki/supportscommands.svg" height="30" width="30"> |
+|    🥈2| [Dev Bot](https://discord.com/oauth2/authorize?client_id=931245390836146186&permissions=8&scope=bot)       |               342 | discord.js | <img src="/static/badges/odznaki/supportscommands.svg" height="30" width="30"> |
+|    🥉3| [Cenzura](https://discord.com/oauth2/authorize?client_id=705552952600952960&permissions=268561494&scope=bot)        |               318 | discord.py | <img src="/static/badges/odznaki/supportscommands.svg" height="30" width="30"> |
+|    4| [Daphner](https://discord.com/oauth2/authorize?client_id=675416683481006159&permissions=8&scope=bot)        |               284 | discord.js | <img src="/static/badges/odznaki/supportscommands.svg" height="30" width="30"> <img src="/static/badges/odznaki/automod.svg" height="30" width="30"> |
