--- a/topka/100000.md
+++ b/topka/100000.md
@@ -1,4 +1,4 @@
-[!badge size="m" variant="info" icon="clock" text="Ostatnia aktualizacja:" margin="0 8 0 0"] [!badge size="m" variant="info" text="29 lipca 2024, godzina: 20:17" margin="0 8 0 0"]
+[!badge size="m" variant="info" icon="clock" text="Ostatnia aktualizacja:" margin="0 8 0 0"] [!badge size="m" variant="info" text="2 sierpnia 2024, godzina: 22:30" margin="0 8 0 0"]
 
 | Ranking | Bot                                                                                           | Szacunkowa liczba serwerów | Biblioteka | Odznaki bota |
 | ---- | --------------------------------------------------------------------------------------------- | ------------------------ | ------------------------ | ------------------------ |
