--- a/topka/500.md
+++ b/topka/500.md
@@ -1,4 +1,4 @@
-[!badge size="m" variant="info" icon="clock" text="Ostatnia aktualizacja:" margin="0 8 0 0"] [!badge size="m" variant="info" text="2 sierpnia 2024, godzina: 22:30" margin="0 8 0 0"]
+[!badge size="m" variant="info" icon="clock" text="Ostatnia aktualizacja:" margin="0 8 0 0"] [!badge size="m" variant="info" text="4 sierpnia 2024, godzina: 01:00" margin="0 8 0 0"]
 
 | Ranking | Bot                                                                                           | Szacunkowa liczba serwerów | Biblioteka | Odznaki bota |
 | ---- | --------------------------------------------------------------------------------------------- | ------------------------ | ------------------------ | ------------------------ |
@@ -7,4 +7,5 @@
 |    🥉3| [Metrum](https://discord.com/oauth2/authorize?client_id=890577647980146688&permissions=8&scope=bot)        |               855 |  | <img src="/static/badges/odznaki/supportscommands.svg" height="30" width="30"> |
 |    4| [Janusz](https://discord.com/oauth2/authorize?client_id=421679109954076692&permissions=8&scope=bot)        |               844 |  | <img src="/static/badges/odznaki/supportscommands.svg" height="30" width="30"> |
 |    5| [popebot](https://discord.com/oauth2/authorize?client_id=997525532101050538&permissions=8&scope=bot)        |               789 | discord.js | <img src="/static/badges/odznaki/supportscommands.svg" height="30" width="30"> |
-|    6| [Shiroe](https://discord.com/oauth2/authorize?client_id=782299960283627540&permissions=8&scope=bot)        |               563 | discord.js | <img src="/static/badges/odznaki/supportscommands.svg" height="30" width="30"> | 
+|    6| [alienMusic](https://discord.com/oauth2/authorize?client_id=997525532101050538&permissions=8&scope=bot)        |               639 | discord.js | <img src="/static/badges/odznaki/supportscommands.svg" height="30" width="30"> |
+|    7| [Shiroe](https://discord.com/oauth2/authorize?client_id=782299960283627540&permissions=8&scope=bot)        |               563 | discord.js | <img src="/static/badges/odznaki/supportscommands.svg" height="30" width="30"> | 
