--- a/topka/1000.md
+++ b/topka/1000.md
@@ -1,4 +1,4 @@
-[!badge size="m" variant="info" icon="clock" text="Ostatnia aktualizacja:" margin="0 8 0 0"] [!badge size="m" variant="info" text="4 sierpnia 2024, godzina: 01:00" margin="0 8 0 0"]
+[!badge size="m" variant="info" icon="clock" text="Ostatnia aktualizacja:" margin="0 8 0 0"] [!badge size="m" variant="info" text="5 sierpnia 2024, godzina: 18:00" margin="0 8 0 0"]
 
 | Ranking | Bot                                                                                           | Szacunkowa liczba serwerów | Biblioteka | Odznaki bota |
 | ---- | --------------------------------------------------------------------------------------------- | ------------------------ | ------------------------ | ------------------------ |
@@ -10,7 +10,7 @@
 |    6 | [Atorin](https://discord.com/oauth2/authorize?client_id=408959273956147200&permissions=8&scope=bot)        |               2,140 | discord.py | <img src="/static/badges/odznaki/supportscommands.svg" height="30" width="30"> |
 |    7| [Klonba](https://discord.com/oauth2/authorize?client_id=488809387910234145&permissions=8&scope=bot)        |               1,970 | discord.js | <img src="/static/badges/odznaki/supportscommands.svg" height="30" width="30"> |
 |    8| [UMPU](https://discord.com/oauth2/authorize?client_id=855900715720245289&permissions=8&scope=bot)       |               1,940 | discord.js | <img src="/static/badges/odznaki/supportscommands.svg" height="30" width="30"> |
-|    9| [Skręcior](https://discord.com/oauth2/authorize?client_id=939103800898224139&permissions=8&scope=bot)        |               1,470 | JDA | <img src="/static/badges/odznaki/premiumbot.svg" height="30" width="30"> |
+|    9| [Skręcior](https://discord.com/oauth2/authorize?client_id=939103800898224139&permissions=8&scope=bot)        |               1,480 | JDA | <img src="/static/badges/odznaki/premiumbot.svg" height="30" width="30"> |
 |    10 | [Bot Muzyczny 2](https://discord.com/oauth2/authorize?client_id=933385820889550878&permissions=8&scope=bot) <img src="/static/badges/bots/botmuzyczny.svg" height="20" width="20">        |       1,300         | discord.js | <img src="/static/badges/odznaki/supportscommands.svg" height="30" width="30"> |
 |    11| [Polish Memes](https://discord.com/oauth2/authorize?client_id=829662885058707497&permissions=8&scope=bot)        |               1,080 |  | <img src="/static/badges/odznaki/supportscommands.svg" height="30" width="30">  |
-|    12| [MaxHard BOT](https://discord.com/oauth2/authorize?client_id=684503427761569908&permissions=8&scope=bot)       |               1,030 |  | <img src="/static/badges/odznaki/supportscommands.svg" height="30" width="30"> |
+|    12| [MaxHard BOT](https://discord.com/oauth2/authorize?client_id=684503427761569908&permissions=8&scope=bot)       |               1,030 | JDA | <img src="/static/badges/odznaki/supportscommands.svg" height="30" width="30"> |
