--- a/topka/500.md
+++ b/topka/500.md
@@ -1,11 +1,11 @@
-[!badge size="m" variant="info" icon="clock" text="Ostatnia aktualizacja:" margin="0 8 0 0"] [!badge size="m" variant="info" text="4 sierpnia 2024, godzina: 01:00" margin="0 8 0 0"]
+[!badge size="m" variant="info" icon="clock" text="Ostatnia aktualizacja:" margin="0 8 0 0"] [!badge size="m" variant="info" text="5 sierpnia 2024, godzina: 18:00" margin="0 8 0 0"]
 
 | Ranking | Bot                                                                                           | Szacunkowa liczba serwerów | Biblioteka | Odznaki bota |
 | ---- | --------------------------------------------------------------------------------------------- | ------------------------ | ------------------------ | ------------------------ |
-|    🥇1| [Furxenity](https://discord.com/oauth2/authorize?client_id=826778019179659314&permissions=8&scope=bot)       |               965 | discord.js | <img src="/static/badges/odznaki/supportscommands.svg" height="30" width="30"> |
-|    🥈2| [RadiOOMbo BOT](https://discord.com/oauth2/authorize?client_id=675416683481006159&permissions=8&scope=bot) <img src="/static/badges/bots/boomfinity.svg" height="20" width="20">        |               886 | discord.js | <img src="/static/badges/odznaki/supportscommands.svg" height="30" width="30"> |
-|    🥉3| [Metrum](https://discord.com/oauth2/authorize?client_id=890577647980146688&permissions=8&scope=bot)        |               855 |  | <img src="/static/badges/odznaki/supportscommands.svg" height="30" width="30"> |
-|    4| [Janusz](https://discord.com/oauth2/authorize?client_id=421679109954076692&permissions=8&scope=bot)        |               844 |  | <img src="/static/badges/odznaki/supportscommands.svg" height="30" width="30"> |
-|    5| [popebot](https://discord.com/oauth2/authorize?client_id=997525532101050538&permissions=8&scope=bot)        |               789 | discord.js | <img src="/static/badges/odznaki/supportscommands.svg" height="30" width="30"> |
-|    6| [alienMusic](https://discord.com/oauth2/authorize?client_id=1067159466811867266)        |               639 | discord.js | <img src="/static/badges/odznaki/supportscommands.svg" height="30" width="30"> |
-|    7| [Shiroe](https://discord.com/oauth2/authorize?client_id=782299960283627540&permissions=8&scope=bot)        |               563 | discord.js | <img src="/static/badges/odznaki/supportscommands.svg" height="30" width="30"> | 
+|    🥇1| [Furxenity](https://discord.com/oauth2/authorize?client_id=826778019179659314&permissions=8&scope=bot)       |               970 | discord.js | <img src="/static/badges/odznaki/supportscommands.svg" height="30" width="30"> |
+|    🥈2| [RadiOOMbo BOT](https://discord.com/oauth2/authorize?client_id=675416683481006159&permissions=8&scope=bot) <img src="/static/badges/bots/boomfinity.svg" height="20" width="20">        |               887 | discord.js | <img src="/static/badges/odznaki/supportscommands.svg" height="30" width="30"> |
+|    🥉3| [Metrum](https://discord.com/oauth2/authorize?client_id=890577647980146688&permissions=8&scope=bot)        |               858 |  | <img src="/static/badges/odznaki/supportscommands.svg" height="30" width="30"> |
+|    4| [Janusz](https://discord.com/oauth2/authorize?client_id=421679109954076692&permissions=8&scope=bot)        |               846 | discord.js | <img src="/static/badges/odznaki/supportscommands.svg" height="30" width="30"> |
+|    5| [popebot](https://discord.com/oauth2/authorize?client_id=997525532101050538&permissions=8&scope=bot)        |               790 | discord.js | <img src="/static/badges/odznaki/supportscommands.svg" height="30" width="30"> |
+|    6| [alienMusic](https://discord.com/oauth2/authorize?client_id=1067159466811867266)        |               645 | discord.js | <img src="/static/badges/odznaki/supportscommands.svg" height="30" width="30"> |
+|    7| [Shiroe](https://discord.com/oauth2/authorize?client_id=782299960283627540&permissions=8&scope=bot)        |               568 | discord.js | <img src="/static/badges/odznaki/supportscommands.svg" height="30" width="30"> | 
