--- a/topka/500.md
+++ b/topka/500.md
@@ -4,8 +4,7 @@
 | ---- | --------------------------------------------------------------------------------------------- | ------------------------ | ------------------------ | ------------------------ |
 |    🥇1| [Furxenity](https://discord.com/oauth2/authorize?client_id=826778019179659314&permissions=8&scope=bot)       |               970 | discord.js | <img src="/static/badges/odznaki/supportscommands.svg" height="30" width="30"> |
 |    🥈2| [RadiOOMbo BOT](https://discord.com/oauth2/authorize?client_id=675416683481006159&permissions=8&scope=bot) <img src="/static/badges/bots/boomfinity.svg" height="20" width="20">        |               887 | discord.js | <img src="/static/badges/odznaki/supportscommands.svg" height="30" width="30"> |
-|    🥉3| [Metrum](https://discord.com/oauth2/authorize?client_id=890577647980146688&permissions=8&scope=bot)        |               858 |  | <img src="/static/badges/odznaki/supportscommands.svg" height="30" width="30"> |
-|    4| [Janusz](https://discord.com/oauth2/authorize?client_id=421679109954076692&permissions=8&scope=bot)        |               846 | discord.js | <img src="/static/badges/odznaki/supportscommands.svg" height="30" width="30"> |
-|    5| [popebot](https://discord.com/oauth2/authorize?client_id=997525532101050538&permissions=8&scope=bot)        |               790 | discord.js | <img src="/static/badges/odznaki/supportscommands.svg" height="30" width="30"> |
-|    6| [alienMusic](https://discord.com/oauth2/authorize?client_id=1067159466811867266)        |               645 | discord.js | <img src="/static/badges/odznaki/supportscommands.svg" height="30" width="30"> |
-|    7| [Shiroe](https://discord.com/oauth2/authorize?client_id=782299960283627540&permissions=8&scope=bot)        |               568 | discord.js | <img src="/static/badges/odznaki/supportscommands.svg" height="30" width="30"> | 
+|    🥉3| [Janusz](https://discord.com/oauth2/authorize?client_id=421679109954076692&permissions=8&scope=bot)        |               846 | discord.js | <img src="/static/badges/odznaki/supportscommands.svg" height="30" width="30"> |
+|    4| [popebot](https://discord.com/oauth2/authorize?client_id=997525532101050538&permissions=8&scope=bot)        |               790 | discord.js | <img src="/static/badges/odznaki/supportscommands.svg" height="30" width="30"> |
+|    5| [alienMusic](https://discord.com/oauth2/authorize?client_id=1067159466811867266)        |               645 | discord.js | <img src="/static/badges/odznaki/supportscommands.svg" height="30" width="30"> |
+|    6| [Shiroe](https://discord.com/oauth2/authorize?client_id=782299960283627540&permissions=8&scope=bot)        |               568 | discord.js | <img src="/static/badges/odznaki/supportscommands.svg" height="30" width="30"> | 
