--- a/topka/250.md
+++ b/topka/250.md
@@ -1,8 +1,8 @@
-[!badge size="m" variant="info" icon="clock" text="Ostatnia aktualizacja:" margin="0 8 0 0"] [!badge size="m" variant="info" text="5 sierpnia 2024, godzina: 18:00" margin="0 8 0 0"]
+[!badge size="m" variant="info" icon="clock" text="Ostatnia aktualizacja:" margin="0 8 0 0"] [!badge size="m" variant="info" text="6 sierpnia 2024, godzina: 17:05" margin="0 8 0 0"]
 
 | Ranking | Bot                                                                                           | Szacunkowa liczba serwerów | Biblioteka | Odznaki bota |
 | ---- | --------------------------------------------------------------------------------------------- | ------------------------ | ------------------------ | ------------------------ |
-|    🥇1| [Aviation](https://discord.com/oauth2/authorize?client_id=1038232661900152912&permissions=8&scope=bot)        |               395 | discord.js | <img src="/static/badges/odznaki/supportscommands.svg" height="30" width="30"> |
-|    🥈2| [Dev Bot](https://discord.com/oauth2/authorize?client_id=931245390836146186&permissions=8&scope=bot)       |               343 | discord.js | <img src="/static/badges/odznaki/supportscommands.svg" height="30" width="30"> |
-|    🥉3| [Cenzura](https://discord.com/oauth2/authorize?client_id=705552952600952960&permissions=268561494&scope=bot)        |               320 | discord.py | <img src="/static/badges/odznaki/supportscommands.svg" height="30" width="30"> |
-|    4| [Daphner](https://discord.com/oauth2/authorize?client_id=1075499829595209789&permissions=8&scope=bot%20applications.commands)        |               286 | discord.js | <img src="/static/badges/odznaki/supportscommands.svg" height="30" width="30"> <img src="/static/badges/odznaki/automod.svg" height="30" width="30"> |
+|    🥇1| [Aviation](https://discord.com/oauth2/authorize?client_id=1038232661900152912&permissions=8&scope=bot)        |               394 | discord.js | <img src="/static/badges/odznaki/supportscommands.svg" height="30" width="30"> |
+|    🥈2| [Dev Bot](https://discord.com/oauth2/authorize?client_id=931245390836146186&permissions=8&scope=bot)       |               344 | discord.js | <img src="/static/badges/odznaki/supportscommands.svg" height="30" width="30"> |
+|    🥉3| [Cenzura](https://discord.com/oauth2/authorize?client_id=705552952600952960&permissions=268561494&scope=bot)        |               321 | femcord.py | <img src="/static/badges/odznaki/supportscommands.svg" height="30" width="30"> |
+|    4| [Daphner](https://discord.com/oauth2/authorize?client_id=1075499829595209789&permissions=8&scope=bot%20applications.commands)        |               288 | discord.js | <img src="/static/badges/odznaki/supportscommands.svg" height="30" width="30"> <img src="/static/badges/odznaki/automod.svg" height="30" width="30"> |
