--- a/topka/250.md
+++ b/topka/250.md
@@ -4,5 +4,5 @@
 | ---- | --------------------------------------------------------------------------------------------- | ------------------------ | ------------------------ | ------------------------ |
 |    🥇1| [Aviation](https://discord.com/oauth2/authorize?client_id=1038232661900152912&permissions=8&scope=bot)        |               394 | discord.js | <img src="/static/badges/odznaki/supportscommands.svg" height="30" width="30"> |
 |    🥈2| [Dev Bot](https://discord.com/oauth2/authorize?client_id=931245390836146186&permissions=8&scope=bot)       |               344 | discord.js | <img src="/static/badges/odznaki/supportscommands.svg" height="30" width="30"> |
-|    🥉3| [Cenzura](https://discord.com/oauth2/authorize?client_id=705552952600952960&permissions=268561494&scope=bot)        |               321 | femcord.py | <img src="/static/badges/odznaki/supportscommands.svg" height="30" width="30"> |
+|    🥉3| [Cenzura](https://discord.com/oauth2/authorize?client_id=705552952600952960&permissions=268561494&scope=bot)        |               321 | femcord (Python) | <img src="/static/badges/odznaki/supportscommands.svg" height="30" width="30"> |
 |    4| [Daphner](https://discord.com/oauth2/authorize?client_id=1075499829595209789&permissions=8&scope=bot%20applications.commands)        |               288 | discord.js | <img src="/static/badges/odznaki/supportscommands.svg" height="30" width="30"> <img src="/static/badges/odznaki/automod.svg" height="30" width="30"> |
