Dodanie biblioteki - Pomocnik Edward

--- a/topka/250.md
+++ b/topka/250.md
@@ -2,7 +2,7 @@
 
 | Ranking | Bot                                                                                           | Szacunkowa liczba serwerów | Biblioteka | Odznaki bota |
 | ---- | --------------------------------------------------------------------------------------------- | ------------------------ | ------------------------ | ------------------------ |
-|    🥇1| [Pomocnik Edward](https://discord.com/oauth2/authorize?client_id=613694998524985354&scope=bot+applications.commands&permissions=2146823543)        |               458 | | |
+|    🥇1| [Pomocnik Edward](https://discord.com/oauth2/authorize?client_id=613694998524985354&scope=bot+applications.commands&permissions=2146823543)        |               458 | discord.js | |
 |    🥈2| [Aviation](https://discord.com/oauth2/authorize?client_id=1038232661900152912&permissions=8&scope=bot)        |               394 | discord.js | <img src="/static/badges/odznaki/supportscommands.svg" height="30" width="30"> |
 |    🥉3| [Dev Bot](https://discord.com/oauth2/authorize?client_id=931245390836146186&permissions=8&scope=bot)       |               344 | discord.js | <img src="/static/badges/odznaki/supportscommands.svg" height="30" width="30"> |
 |    4| [Cenzura](https://discord.com/oauth2/authorize?client_id=705552952600952960&permissions=268561494&scope=bot)        |               321 | femcord (Python) | <img src="/static/badges/odznaki/supportscommands.svg" height="30" width="30"> |
