--- a/topka/250.md
+++ b/topka/250.md
@@ -1,10 +1,10 @@
-[!badge size="m" variant="info" icon="clock" text="Ostatnia aktualizacja:" margin="0 8 0 0"] [!badge size="m" variant="info" text="7 sierpnia 2024, godzina: 23:00" margin="0 8 0 0"]
+[!badge size="m" variant="info" icon="clock" text="Ostatnia aktualizacja:" margin="0 8 0 0"] [!badge size="m" variant="info" text="13 sierpnia 2024, godzina: 21:00" margin="0 8 0 0"]
 
 | Ranking | Bot                                                                                           | Szacunkowa liczba serwerów | Biblioteka | Odznaki bota |
 | ---- | --------------------------------------------------------------------------------------------- | ------------------------ | ------------------------ | ------------------------ |
-|    🥇1| [Pomocnik Edward](https://discord.com/oauth2/authorize?client_id=613694998524985354&scope=bot+applications.commands&permissions=2146823543)        |               458 | discord.js | |
+|    🥇1| [Pomocnik Edward](https://discord.com/oauth2/authorize?client_id=613694998524985354&scope=bot+applications.commands&permissions=2146823543)        |               459 | discord.js | |
 |    🥈2| [Aviation](https://discord.com/oauth2/authorize?client_id=1038232661900152912&permissions=8&scope=bot)        |               394 | discord.js | <img src="/static/badges/odznaki/supportscommands.svg" height="30" width="30"> |
-|    🥉3| [Dev Bot](https://discord.com/oauth2/authorize?client_id=931245390836146186&permissions=8&scope=bot)       |               344 | discord.js | <img src="/static/badges/odznaki/supportscommands.svg" height="30" width="30"> |
-|    4| [Cenzura](https://discord.com/oauth2/authorize?client_id=705552952600952960&permissions=268561494&scope=bot)        |               321 | femcord (Python) | <img src="/static/badges/odznaki/supportscommands.svg" height="30" width="30"> |
-|    5| [AmpersandBot](https://discord.com/oauth2/authorize?client_id=645314415578841101&scope=bot&permissions=1174598)        |               311 | discord.js | <img src="/static/badges/odznaki/supportscommands.svg" height="30" width="30"> |
-|    6| [Daphner](https://discord.com/oauth2/authorize?client_id=1075499829595209789&permissions=8&scope=bot%20applications.commands)        |               291 | discord.js | <img src="/static/badges/odznaki/supportscommands.svg" height="30" width="30"> <img src="/static/badges/odznaki/automod.svg" height="30" width="30"> |
+|    🥉3| [Dev Bot](https://discord.com/oauth2/authorize?client_id=931245390836146186&permissions=8&scope=bot)       |               345 | discord.js | <img src="/static/badges/odznaki/supportscommands.svg" height="30" width="30"> |
+|    4| [CENZURA](https://discord.com/oauth2/authorize?client_id=705552952600952960&permissions=268561494&scope=bot)        |               321 | femcord (Python) | <img src="/static/badges/odznaki/supportscommands.svg" height="30" width="30"> |
+|    5| [AmpersandBot](https://discord.com/oauth2/authorize?client_id=645314415578841101&scope=bot&permissions=1174598)        |               316 | discord.js | <img src="/static/badges/odznaki/supportscommands.svg" height="30" width="30"> |
+|    6| [Daphner](https://discord.com/oauth2/authorize?client_id=1075499829595209789&permissions=8&scope=bot%20applications.commands)        |               298 | discord.js | <img src="/static/badges/odznaki/supportscommands.svg" height="30" width="30"> <img src="/static/badges/odznaki/automod.svg" height="30" width="30"> |
