--- a/topka/500.md
+++ b/topka/500.md
@@ -6,5 +6,5 @@
 |    🥈2| [RadiOOMbo BOT](https://discord.com/oauth2/authorize?client_id=675416683481006159&permissions=8&scope=bot) <img src="/static/badges/bots/boomfinity.svg" height="20" width="20">        |               890 | discord.js | <img src="/static/badges/odznaki/supportscommands.svg" height="30" width="30"> |
 |    🥉3| [Janusz](https://discord.com/oauth2/authorize?client_id=421679109954076692&permissions=8&scope=bot)        |               849 | discord.js | <img src="/static/badges/odznaki/supportscommands.svg" height="30" width="30"> |
 |    4| [popebot](https://discord.com/oauth2/authorize?client_id=997525532101050538&permissions=8&scope=bot)        |               800 | discord.js | <img src="/static/badges/odznaki/supportscommands.svg" height="30" width="30"> |
-|    5| [alienMusic](https://discord.com/oauth2/authorize?client_id=1067159466811867266)        |               702 | discord.js | <img src="/static/badges/odznaki/supportscommands.svg" height="30" width="30"> |
+|    5| [alienMusic](https://discord.com/oauth2/authorize?client_id=1067159466811867266)        |               702 | discordx | <img src="/static/badges/odznaki/supportscommands.svg" height="30" width="30"> |
 |    6| [Shiroe](https://discord.com/oauth2/authorize?client_id=782299960283627540&permissions=8&scope=bot)        |               577 | discord.js | <img src="/static/badges/odznaki/supportscommands.svg" height="30" width="30"> | 
