--- a/topka/1000.md
+++ b/topka/1000.md
@@ -1,15 +1,16 @@
-[!badge size="m" variant="info" icon="clock" text="Ostatnia aktualizacja:" margin="0 8 0 0"] [!badge size="m" variant="info" text="28 sierpnia 2024, godzina: 5:30" margin="0 8 0 0"]
+[!badge size="m" variant="info" icon="clock" text="Ostatnia aktualizacja:" margin="0 8 0 0"] [!badge size="m" variant="info" text="08 września 2024, godzina: 14:00" margin="0 8 0 0"]
 
 | Ranking | Bot                                                                                           | Szacunkowa liczba serwerów | Biblioteka | Odznaki bota |
 | ---- | --------------------------------------------------------------------------------------------- | ------------------------ | ------------------------ | ------------------------ |
 |    🥇1 | [vaobot](https://discord.com/oauth2/authorize?client_id=582183202341388308&scope=bot)           |      5,190        | discord.js | <img src="/static/badges/odznaki/supportscommands.svg" height="30" width="30"> <img src="/static/badges/odznaki/premiumbot.svg" height="30" width="30"> <img src="/static/badges/odznaki/automod.svg" height="30" width="30">  |
 |    🥈2 | [Somsiad](https://discord.com/oauth2/authorize?client_id=473816281028493314&permissions=8&scope=bot)           |      5,170      | discord.py |  |
-|    🥉3 | [boht](https://discord.com/oauth2/authorize?client_id=489377322042916885&permissions=8&scope=bot)        |               5,140 | discord.js | <img src="/static/badges/odznaki/supportscommands.svg" height="30" width="30"> |
-|    4 | [Janusz](https://discord.com/oauth2/authorize?client_id=699551628499615764&permissions=8&scope=bot)        |               4,940 | discord.js | <img src="/static/badges/odznaki/supportscommands.svg" height="30" width="30"> |
-|    5 | [StartIT (Beta)](https://discord.com/oauth2/authorize?client_id=690617660177907712&permissions=8&scope=bot) <img src="/static/badges/bots/startit.svg" height="20" width="20">        |               3,740 | Niestandardowy (Python) | <img src="/static/badges/odznaki/supportscommands.svg" height="30" width="30"> |
-|    6| [UMPU](https://discord.com/oauth2/authorize?client_id=855900715720245289&permissions=8&scope=bot)       |               2,200 | discord.js | <img src="/static/badges/odznaki/supportscommands.svg" height="30" width="30"> |
-|    7 | [Atorin](https://discord.com/oauth2/authorize?client_id=408959273956147200&permissions=8&scope=bot)        |               2,140 | discord.py | <img src="/static/badges/odznaki/supportscommands.svg" height="30" width="30"> |
-|    8| [Klonba](https://discord.com/oauth2/authorize?client_id=488809387910234145&permissions=8&scope=bot)        |               1,970 | discord.js | <img src="/static/badges/odznaki/supportscommands.svg" height="30" width="30"> |
-|    9| [Skręcior](https://discord.com/oauth2/authorize?client_id=939103800898224139&permissions=8&scope=bot)        |               1,520 | JDA | <img src="/static/badges/odznaki/premiumbot.svg" height="30" width="30"> |
-|    10 | [Bot Muzyczny 2](https://discord.com/oauth2/authorize?client_id=933385820889550878&permissions=8&scope=bot) <img src="/static/badges/bots/botmuzyczny.svg" height="20" width="20">        |       1,290         | discord.js | <img src="/static/badges/odznaki/supportscommands.svg" height="30" width="30"> |
-|    11| [MaxHard BOT](https://discord.com/oauth2/authorize?client_id=684503427761569908&permissions=8&scope=bot)       |               1,050 | JDA | <img src="/static/badges/odznaki/supportscommands.svg" height="30" width="30"> |
+|    🥉3 | [boht](https://discord.com/oauth2/authorize?client_id=489377322042916885&permissions=8&scope=bot)        |               5,160 | discord.js | <img src="/static/badges/odznaki/supportscommands.svg" height="30" width="30"> |
+|    4 | [Janusz](https://discord.com/oauth2/authorize?client_id=699551628499615764&permissions=8&scope=bot)        |               4,970 | discord.js | <img src="/static/badges/odznaki/supportscommands.svg" height="30" width="30"> |
+|    5 | [StartIT (Beta)](https://discord.com/oauth2/authorize?client_id=690617660177907712&permissions=8&scope=bot) <img src="/static/badges/bots/startit.svg" height="20" width="20">        |               3,730 | Niestandardowy (Python) | <img src="/static/badges/odznaki/supportscommands.svg" height="30" width="30"> |
+|    6 | [FratikB0T](https://discord.com/oauth2/authorize?client_id=338359366891732993&permissions=8&scope=bot)        |               3,500 | b/d | <img src="/static/badges/odznaki/supportscommands.svg" height="30" width="30"> |
+|    7 | [UMPU](https://discord.com/oauth2/authorize?client_id=855900715720245289&permissions=8&scope=bot)       |               2,320 | discord.js | <img src="/static/badges/odznaki/supportscommands.svg" height="30" width="30"> |
+|    8 | [Atorin](https://discord.com/oauth2/authorize?client_id=408959273956147200&permissions=8&scope=bot)        |               2,140 | discord.py | <img src="/static/badges/odznaki/supportscommands.svg" height="30" width="30"> |
+|    9 | [Klonba](https://discord.com/oauth2/authorize?client_id=488809387910234145&permissions=8&scope=bot)        |               1,980 | discord.js | <img src="/static/badges/odznaki/supportscommands.svg" height="30" width="30"> |
+|    10 | [Skręcior](https://discord.com/oauth2/authorize?client_id=939103800898224139&permissions=8&scope=bot)        |               1,530 | JDA | <img src="/static/badges/odznaki/premiumbot.svg" height="30" width="30"> |
+|    11 | [Bot Muzyczny 2](https://discord.com/oauth2/authorize?client_id=933385820889550878&permissions=8&scope=bot) <img src="/static/badges/bots/botmuzyczny.svg" height="20" width="20">        |       1,300         | discord.js | <img src="/static/badges/odznaki/supportscommands.svg" height="30" width="30"> |
+|    12 | [MaxHard BOT](https://discord.com/oauth2/authorize?client_id=684503427761569908&permissions=8&scope=bot)       |               1,060 | JDA | <img src="/static/badges/odznaki/supportscommands.svg" height="30" width="30"> |
