--- a/topka/10000.md
+++ b/topka/10000.md
@@ -1,7 +1,7 @@
-[!badge size="m" variant="info" icon="clock" text="Ostatnia aktualizacja:" margin="0 8 0 0"] [!badge size="m" variant="info" text="28 sierpnia 2024, godzina: 5:30" margin="0 8 0 0"]
+[!badge size="m" variant="info" icon="clock" text="Ostatnia aktualizacja:" margin="0 8 0 0"] [!badge size="m" variant="info" text="08 września 2024, godzina: 14:00" margin="0 8 0 0"]
 
 | Ranking | Bot                                                                                           | Szacunkowa liczba serwerów | Biblioteka | Odznaki bota |
 | ---- | --------------------------------------------------------------------------------------------- | ------------------------ | ------------------------ | ------------------------ |
-|    🥇1 | [AdviceBot](https://discord.com/oauth2/authorize?client_id=942110955502989373&permissions=8&scope=bot) <img src="/static/badges/bots/advice.svg" height="20" width="20">        |               92,200 | discord.py | <img src="/static/badges/odznaki/supportscommands.svg" height="30" width="30"> |
-|    🥈2 | [Bot Muzyczny](https://discord.com/oauth2/authorize?client_id=840892428613320726&permissions=8&scope=bot) <img src="/static/badges/bots/botmuzyczny.svg" height="20" width="20">        |               28,100 | discord.js | <img src="/static/badges/odznaki/supportscommands.svg" height="30" width="30"> |
+|    🥇1 | [AdviceBot](https://discord.com/oauth2/authorize?client_id=942110955502989373&permissions=8&scope=bot) <img src="/static/badges/bots/advice.svg" height="20" width="20">        |               93,100 | discord.py | <img src="/static/badges/odznaki/supportscommands.svg" height="30" width="30"> |
+|    🥈2 | [Bot Muzyczny](https://discord.com/oauth2/authorize?client_id=840892428613320726&permissions=8&scope=bot) <img src="/static/badges/bots/botmuzyczny.svg" height="20" width="20">        |               28,200 | discord.js | <img src="/static/badges/odznaki/supportscommands.svg" height="30" width="30"> |
 |    🥉3 | [BOOMfinity](https://discord.com/oauth2/authorize?client_id=450017151323996173&permissions=8&scope=bot) <img src="/static/badges/bots/boomfinity.svg" height="20" width="20">        |               20,500 | discord.js | <img src="/static/badges/odznaki/supportscommands.svg" height="30" width="30"> | 
