--- a/topka/100000.md
+++ b/topka/100000.md
@@ -1,5 +1,5 @@
-[!badge size="m" variant="info" icon="clock" text="Ostatnia aktualizacja:" margin="0 8 0 0"] [!badge size="m" variant="info" text="28 sierpnia 2024, godzina: 5:30" margin="0 8 0 0"]
+[!badge size="m" variant="info" icon="clock" text="Ostatnia aktualizacja:" margin="0 8 0 0"] [!badge size="m" variant="info" text="08 września 2024, godzina: 14:00" margin="0 8 0 0"]
 
 | Ranking | Bot                                                                                           | Szacunkowa liczba serwerów | Biblioteka | Odznaki bota |
 | ---- | --------------------------------------------------------------------------------------------- | ------------------------ | ------------------------ | ------------------------ |
-|    🥇1 | [StartIT](https://discord.com/oauth2/authorize?client_id=572906387382861835&permissions=8&scope=bot) <img src="/static/badges/bots/startit.svg" height="20" width="20">         |               348,000 | Niestandardowy (Python) |  <img src="/static/badges/odznaki/supportscommands.svg" height="30" width="30"> | 
+|    🥇1 | [StartIT](https://discord.com/oauth2/authorize?client_id=572906387382861835&permissions=8&scope=bot) <img src="/static/badges/bots/startit.svg" height="20" width="20">         |               352,000 | Niestandardowy (Python) |  <img src="/static/badges/odznaki/supportscommands.svg" height="30" width="30"> | 
