--- a/topka/150.md
+++ b/topka/150.md
@@ -1,8 +1,8 @@
-[!badge size="m" variant="info" icon="clock" text="Ostatnia aktualizacja:" margin="0 8 0 0"] [!badge size="m" variant="info" text="28 sierpnia 2024, godzina: 5:30" margin="0 8 0 0"]
+[!badge size="m" variant="info" icon="clock" text="Ostatnia aktualizacja:" margin="0 8 0 0"] [!badge size="m" variant="info" text="08 września 2024, godzina: 14:00" margin="0 8 0 0"]
 
 | Ranking | Bot                                                                                           | Szacunkowa liczba serwerów | Biblioteka | Odznaki bota |
 | ---- | --------------------------------------------------------------------------------------------- | ------------------------ | ------------------------ | ------------------------ |
-|    🥇1| [MightyBot](https://discord.com/oauth2/authorize?client_id=569914884867751956&scope=bot+applications.commands&permissions=2146958847)       |               217 | discord.js | <img src="/static/badges/odznaki/supportscommands.svg" height="30" width="30"> <img src="/static/badges/odznaki/premiumbot.svg" height="30" width="30"> |
+|    🥇1| [MightyBot](https://discord.com/oauth2/authorize?client_id=569914884867751956&scope=bot+applications.commands&permissions=2146958847)       |               222 | discord.js | <img src="/static/badges/odznaki/supportscommands.svg" height="30" width="30"> <img src="/static/badges/odznaki/premiumbot.svg" height="30" width="30"> |
 |    🥈2| [DBIT](https://discord.com/oauth2/authorize?client_id=680358256732143626&scope=bot&permissions=8)       |               213 | discord.js | <img src="/static/badges/odznaki/supportscommands.svg" height="30" width="30"> <img src="/static/badges/odznaki/automod.svg" height="30" width="30"> |
-|    🥉3| [Muse](https://discord.com/oauth2/authorize?client_id=1243281628680159242&permissions=8&scope=bot) <img src="/static/badges/bots/advice.svg" height="20" width="20">        |               181 | discord.ts | <img src="/static/badges/odznaki/supportscommands.svg" height="30" width="30"> <img src="/static/badges/odznaki/premiumbot.svg" height="30" width="30"> |
-|    4| [Styz](https://discord.com/oauth2/authorize?client_id=1176269444117434410&permissions=8&scope=bot%20applications.commands)        |               168 | discord.js | <img src="/static/badges/odznaki/supportscommands.svg" height="30" width="30"> <img src="/static/badges/odznaki/automod.svg" height="30" width="30"> |
+|    🥉3| [Muse](https://discord.com/oauth2/authorize?client_id=1243281628680159242&permissions=8&scope=bot) <img src="/static/badges/bots/advice.svg" height="20" width="20">        |               198 | discord.ts | <img src="/static/badges/odznaki/supportscommands.svg" height="30" width="30"> <img src="/static/badges/odznaki/premiumbot.svg" height="30" width="30"> |
+|    4| [Styz](https://discord.com/oauth2/authorize?client_id=1176269444117434410&permissions=8&scope=bot%20applications.commands)        |               170 | discord.js | <img src="/static/badges/odznaki/supportscommands.svg" height="30" width="30"> <img src="/static/badges/odznaki/automod.svg" height="30" width="30"> |
