--- a/topka/150.md
+++ b/topka/150.md
@@ -2,6 +2,5 @@
 
 | Ranking | Bot                                                                                           | Szacunkowa liczba serwerów | Biblioteka | Odznaki bota |
 | ---- | --------------------------------------------------------------------------------------------- | ------------------------ | ------------------------ | ------------------------ |
-|    🥇1| [Styz](https://discord.com/oauth2/authorize?client_id=1176269444117434410&permissions=8&scope=bot%20applications.commands)        |               243 | discord.js | <img src="/static/badges/odznaki/supportscommands.svg" height="30" width="30"> <img src="/static/badges/odznaki/automod.svg" height="30" width="30"> |
-|    🥈2| [MightyBot](https://discord.com/oauth2/authorize?client_id=569914884867751956&scope=bot+applications.commands&permissions=2146958847)       |               227 | discord.js | <img src="/static/badges/odznaki/supportscommands.svg" height="30" width="30"> <img src="/static/badges/odznaki/premiumbot.svg" height="30" width="30"> |
+|    🥇1| [MightyBot](https://discord.com/oauth2/authorize?client_id=569914884867751956&scope=bot+applications.commands&permissions=2146958847)       |               229 | discord.js | <img src="/static/badges/odznaki/supportscommands.svg" height="30" width="30"> <img src="/static/badges/odznaki/premiumbot.svg" height="30" width="30"> |
 
